--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "noflo-oembed",
   "description": "oEmbed components for the NoFlo flow-based programming environment",
   "author": "Henri Bergius <henri.bergius@iki.fi>",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "licenses": [{
     "type": "MIT",
     "url": "https://github.com/bergie/noflo/raw/master/LICENSE"
@@ -15,7 +15,7 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-    "noflo": "0.3.x",
+    "noflo": "0.5.x",
     "oembed": "0.1.x"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "coffee-script": "1.4.x"
   },
   "noflo": {
+    "icon": "youtube-play",
     "components": {
       "GetEmbed": "./components/GetEmbed.coffee"
     }
