--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "description": "oEmbed components for the NoFlo flow-based programming environment",
   "author": "Henri Bergius <henri.bergius@iki.fi>",
   "version": "0.0.2",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/bergie/noflo/raw/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/noflo/noflo-oembed.git"
   },
+  "keywords": ["noflo"],
   "engines": {
     "node": ">=0.6.0"
   },
