--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-    "noflo": "0.5.22",
-    "oembed": "0.1.x"
+    "noflo": "~0.5.22",
+    "oembed": "~0.1.0"
   },
   "devDependencies": {
-    "nodeunit": ">=0.9.1",
-    "coffeelint": "1.15.7",
-    "coffee-script": "1.10.0"
+    "nodeunit": "^0.9.1",
+    "coffeelint": "^1.15.7",
+    "coffee-script": "^1.10.0"
   },
   "noflo": {
     "icon": "youtube-play",
