--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "type": "git",
     "url": "https://github.com/noflo/noflo-oembed.git"
   },
-  "keywords": ["noflo"],
+  "keywords": [
+    "noflo"
+  ],
   "engines": {
     "node": ">=0.6.0"
   },
@@ -17,9 +19,10 @@
     "oembed": "~0.1.0"
   },
   "devDependencies": {
-    "nodeunit": "^0.9.1",
+    "chai": "^3.5.0",
+    "coffee-script": "^1.10.0",
     "coffeelint": "^1.15.7",
-    "coffee-script": "^1.10.0"
+    "mocha": "^3.2.0"
   },
   "noflo": {
     "icon": "youtube-play",
@@ -29,6 +32,6 @@
   },
   "scripts": {
     "pretest": "./node_modules/.bin/coffeelint -r components",
-    "test": "./node_modules/.bin/nodeunit test"
+    "test": "mocha --compilers coffee:coffee-script/register --require coffee-script/register -R spec -t 2000 spec/*.coffee"
   }
 }
