--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-    "noflo": "~0.5.22",
+    "noflo": "0.x >= 0.5",
     "oembed": "~0.1.0"
   },
   "devDependencies": {
