--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "coffee-script": "^1.12.1"
+    "coffee-script": "^1.12.1",
     "coffeelint": "^1.16.0",
     "mocha": "^3.2.0"
   },
