--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "noflo": "0.x >= 0.5",
-    "oembed": "~0.1.0"
+    "superagent": "^3.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
