--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "chai": "^4.0.0",
-    "coffee-script": "^1.12.1",
-    "coffeelint": "^1.16.0",
+    "coffeescript": "^2.0.2",
+    "coffeelint": "^2.0.7",
     "mocha": "^4.0.0"
   },
   "noflo": {
@@ -29,6 +29,6 @@
   },
   "scripts": {
     "pretest": "./node_modules/.bin/coffeelint -r components",
-    "test": "mocha --compilers coffee:coffee-script/register --require coffee-script/register -R spec -t 2000 spec/*.coffee"
+    "test": "mocha --require coffeescript/register --require coffee-script/register -R spec -t 2000 spec/*.coffee"
   }
 }
