--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   },
   "scripts": {
     "pretest": "./node_modules/.bin/coffeelint -r components",
-    "test": "mocha --require coffeescript/register --require coffee-script/register -R spec -t 2000 spec/*.coffee"
+    "test": "mocha --require coffeescript/register -R spec -t 2000 spec/*.coffee"
   }
 }
